openshift/01-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reactive-flux-app
    version: latest
  name: reactive-flux-app
  namespace: reactive-flux-app
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    deploymentconfig: reactive-flux-app
  sessionAffinity: None
  type: ClusterIP
