openshift/05-db-service.yml
kind: Service
apiVersion: v1
metadata:
  name: dbsvc
spec:
  ports:
    - port: 5432
      targetPort: 5432
