openshift/02-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: reactive-flux-app
    version: latest
  name: reactive-flux-app
  nampespace: reactive-flux-app
spec:
  path: /
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: reactive-flux-app
    weight: 100
  wildcardPolicy: None
